src/styles/main.scss
@import "../shared/templates";

header.main-header {
  position: sticky;
  top: 0;
  z-index: 3;
  height: 6.4rem;
  //display: flex;

  background: white;
  padding: 0 3.2rem;
  box-shadow: 0 1px rgba(64, 87, 109, .07);

  img {
    width: 5rem;
    height: 5rem;
    margin: auto 0;
  }

  h1 {
    font-size: 3rem;
    margin: auto auto;
    color: #3FBFBD;
  }

  .nav-item {
    margin: .2rem 1em .2em 0;
  }

  #auth-info {
    @extend %flex_center;
    justify-content: flex-end;

    #nav-mobile {
      display: flex;

    }

    button {
      &#download-button {
        margin: 0 3rem;
      }
    }
  }
}

main.main {
  flex-direction: column;
  padding: 0 3.2rem;

  .main-choice {
    padding-top: 3.2rem;

    &__inner {
      position: relative;
      height: 34.4rem;
      border-radius: 8px;

      &-title {
        font-size: 4.8rem;
        text-align: center;
        color: white;
        margin-bottom: 3.2rem;
      }

      &-input {
        background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24'%3E%3Cpath fill='currentColor' d='M15.2 16.34a7.5 7.5 0 1 1 1.38-1.45l4.2 4.2a1 1 0 1 1-1.42 1.41l-4.16-4.16zm-4.7.16a6 6 0 1 0 0-12 6 6 0 0 0 0 12z'/%3E%3C/svg%3E");
        background-position: left 8px center;
        background-size: 2.4rem;
        background-repeat: no-repeat;
        padding: 0.9rem 1.2rem 1rem 4rem;
        border-radius: 5px;
        min-width: 4rem;
        width: 100%;
        box-sizing: border-box;
        height: 4rem;
        color: #0e1318;
        cursor: text;
        outline: none;
        border: none;
        margin-bottom: 1.6rem;
        font-size: 1.5rem;
      }

      &-text {
        color: #fff;
        text-align: center;
        line-height: 1.6;
        font-size: 1.8rem;
        overflow-wrap: break-word;
      }

      .main-img {
        width: 100%;
        height: 100%;
        object-fit: cover;
        border-radius: 8px;
      }

      .main-div {
        @extend %flex_column;
        position: absolute;
        top: 50%;
        left: 50%;
        transform: translateX(-50%) translateY(-50%);
        z-index: 1;
      }
    }
  }

  .create-design {
    margin-top: 4.8rem;

    &__inner-title {
      font-weight: 700;
      font-size: 2.4rem;
      letter-spacing: -.03rem;
      line-height: 1.3;
      color: #0e1318;
      margin-bottom: 2.4rem;
    }
  }

  .examples {
    margin-top: 4.8rem;

    h4 {
      font-weight: 700;
      font-size: 2.4rem;
      letter-spacing: -.03rem;
      line-height: 1.3;
      color: #0e1318;
      margin-bottom: 2.4rem;
    }
  }
}

.examples__inner-title {
  font-weight: 700;
  font-size: 2.4rem;
  letter-spacing: -.03rem;
  line-height: 1.3;
  color: #0e1318;
}

footer {
  padding: 1rem 2rem;
  font-size: 1.5rem;
  text-decoration: none;
  margin: 3rem auto;
  text-align: center;
  box-shadow: -1px 0 rgba(64, 87, 109, .07);
  color: rgba(17, 23, 29, 1);
}

footer a {
  text-decoration: none;
  text-align: center;
  color: rgba(17, 23, 29, 1);
}

footer div {
  display: flex;
  justify-content: center;
  margin: 1rem auto;
}

footer img {
  width: 8rem;
  margin-left: 2rem;
}

footer img.gh {
  width: 2rem;
  margin-top: -0.2rem;
}

.modal-content {
  img {
    max-width: 100%;
  }
}

.modal-footer {
  display: flex;
  justify-content: space-around;
}

.authentication {
  max-width: 400px !important;
  font-size: 17px;

  button {
    margin-top: 10px !important;
    border-radius: 15px !important;
  }

  label {
    margin: 8px 0;
  }

  input {
    font-size: 16px !important;
    border-radius: 15px !important;
  }

  .modal-body {
    padding: 20px 15px 20px 15px !important;
  }
  .nav-link {
    text-transform: uppercase;
  }
}

.main-header {
  .account-btn, .nav-link.btn {
    background-color: #26a69a;
    color: #eff9f2 !important;
  }
}

.account-info {
  button {
    margin: .2rem 1em .2em 0;
  }
}

